--- a/.github/workflows/supabase-migrate.yml
+++ b/.github/workflows/supabase-migrate.yml
@@ -34,7 +34,7 @@ permissions:
 
 concurrency:
   group: supabase-migrate-${{ github.event_name == 'pull_request' && github.event.pull_request.base.ref || github.ref_name }}
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 jobs:
   migrate:
